<resources>
    <string name="app_name">Buku Hutang</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="save">SAVE</string>
    <string name="update">UPDATE</string>
    <string name="hutang">HUTANG</string>
    <string name="lunas">LUNAS</string>
    <string name="total">TOTAL HUTANG</string>
    <string name="date">Tanggal</string>
    <string name="kategori">Kategori</string>
    <string name="jumlah">Jumlah</string>
    <string name="note">Catatan</string>
    <string name="create">Create Account</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="konfirmasi">Konfirmasi Password</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="grafiklunas">Grafik Lunas</string>
    <string name="grafikhutang">Grafik Hutang</string>
    <string name="about_us">Tentang Kami</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="find_us">Find Us</string>
    <string name="back">Back</string>
</resources>
