<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_incomegraf"
            android:icon="@drawable/income"
            android:title="@string/grafikhutang" />
        <item
            android:id="@+id/nav_expgaf"
            android:icon="@drawable/expanses"
            android:title="@string/grafiklunas" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Logout" />
    </group>


</menu>
