<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/birumuda"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/iconbutang"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:textColor="@color/hitam"
        android:textSize="15sp"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/hitam"
        android:textSize="15sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/kuning"
        android:fontFamily="@font/leter"
        android:text="@string/login"
        android:textColor="@color/putih"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@color/abu"
        android:fontFamily="@font/leter"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/hitam"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>