<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/birumuda"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/iconbutang" />

    <EditText
        android:id="@+id/edituser"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:textColor="@color/hitam"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="230dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textColor="@color/hitam"
        android:textSize="15sp"

        />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="230dp"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/hitam"
        android:textSize="15sp"

        />

    <EditText
        android:id="@+id/editkonfpass"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/konfirmasi"
        android:inputType="textPassword"
        android:textColor="@color/hitam"
        android:textSize="15sp"

        />

    <Button
        android:id="@+id/buttonregister"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/orange"
        android:fontFamily="@font/leter"
        android:text="@string/submit"
        android:textColor="@color/putih"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="you have account? "
            android:textColor="@color/hitam"
            android:textColorHint="@color/hitam"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>


</LinearLayout>
