<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button

                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bek">

            </Button>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="2dp"
                android:text="Update Data"
                android:textColor="@color/putih"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/buku" />

    <android.support.v7.widget.CardView
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/whitesmoke"
        app:cardCornerRadius="10dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addincome"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/dodgerblue"
                android:text="@string/hutang"
                android:textColor="@color/putih" />

            <Button
                android:id="@+id/addexp"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:background="@color/whitesmoke"
                android:text="@string/lunas" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/whitesmoke"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtdate"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:fontFamily="@font/leter"
                android:gravity="center"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/hitam"
                android:textSize="18dp"

                android:textStyle="bold" />

            <EditText
                android:id="@+id/date"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/txtdate" />

            <Button
                android:id="@+id/calendar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/date"
                android:background="@drawable/calendar" />

            <TextView
                android:id="@+id/txtkategori"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@id/txtdate"
                android:fontFamily="@font/leter"
                android:gravity="center"
                android:text="@string/kategori"
                android:textAlignment="center"
                android:textColor="@color/hitam"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_below="@id/txtdate"
                android:layout_toRightOf="@id/txtkategori" />

            <TextView
                android:id="@+id/txtjumlah"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@id/txtkategori"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/leter"
                android:gravity="center"
                android:text="@string/jumlah"
                android:textAlignment="center"
                android:textColor="@color/hitam"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtjumlah"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@id/txtkategori"
                android:layout_toRightOf="@id/txtjumlah"
                android:inputType="number" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/whitesmoke"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtnote"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:fontFamily="@font/leter"
                android:gravity="center"
                android:text="@string/note"
                android:textAlignment="center"
                android:textColor="@color/hitam"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtnote"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/txtnote"
                android:inputType="text" />

            <Button
                android:id="@+id/btncamera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/edtnote"
                android:background="@drawable/camera" />

            <ImageView
                android:id="@+id/imgnote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtnote"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button

        android:id="@+id/btnsave"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/roudedbtn3"
        android:fontFamily="@font/leter"
        android:text="Update"
        android:textColor="@color/putih"
        android:textSize="18dp"
        android:textStyle="bold" />


</LinearLayout>