<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button

                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bek">

            </Button>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="2dp"
                android:text="Lihat Data"
                android:textColor="@color/putih"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/td" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:cardBackgroundColor="@color/whitesmoke">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lhtKategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/leter"
                android:gravity="center"
                android:text="Food"
                android:textColor="@color/hitam"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtcat"

                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lhtKategori"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/leter"
                android:text="@string/kategori"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lhtKategori"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/txtcat"
                android:fontFamily="@font/leter"
                android:text="Expenses"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtmoney"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cat"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/leter"
                android:text="@string/jumlah"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cat"
                android:layout_toRightOf="@id/txtmoney"
                android:fontFamily="@font/leter"
                android:text="90000"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txdate"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtmoney"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/leter"
                android:text="@string/date"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtmoney"
                android:layout_toRightOf="@id/txtmoney"
                android:fontFamily="@font/leter"
                android:text="2018-19-9"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txnote"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txdate"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/leter"
                android:text="@string/note"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/not"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txdate"
                android:layout_toRightOf="@id/txtmoney"
                android:fontFamily="@font/leter"
                android:text="semangat"
                android:textColor="@color/hitam"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/not"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/delete"
                android:onClick="delete" />

            <Button
                android:id="@+id/update"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/not"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/delete"
                android:background="@drawable/update" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>