<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.papb.butang.bukuhutang.menu"
    tools:showIn="@layout/app_bar_menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="Halo,"
        android:textColor="@color/putih"
        android:textColorHint="@color/putih"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="Selamat Datang di Butang"
        android:textColor="@color/whitesmoke"
        android:textColorHint="@color/whitesmoke"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView

        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:shadowDx="0"
        android:shadowDy="30"
        app:cardBackgroundColor="@color/chardonnay"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/txtbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/antipasto"

                android:gravity="center_horizontal"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@color/hitam"
                android:textColorHint="@color/hitam"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtbl"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-1dp"
                android:fontFamily="@font/leter"
                android:gravity="center_horizontal"
                android:text="17000"
                android:textAlignment="center"
                android:textColor="@color/hitam"
                android:textColorHint="@color/hitam"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView

            android:layout_width="153dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/froly"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/txtincome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/antipasto"
                    android:gravity="center_horizontal"
                    android:text="@string/hutang"
                    android:textAlignment="center"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/hitam"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtincome"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/leter"

                    android:gravity="center_horizontal"
                    android:text="17000"
                    android:textAlignment="center"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/hitam"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="153dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/shamrock"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/txtexp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/antipasto"
                    android:gravity="center_horizontal"
                    android:text="@string/lunas"
                    android:textAlignment="center"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/hitam"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtexp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/leter"
                    android:gravity="center_horizontal"
                    android:text="17000"
                    android:textAlignment="center"
                    android:textColor="@color/hitam"
                    android:textColorHint="@color/hitam"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="DAFTAR HUTANG PEMBELI"
        android:textColor="@color/darkgrey"
        android:textColorHint="@color/darkgrey"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/whitesmoke"
        app:cardCornerRadius="15dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </android.support.v7.widget.CardView>

</android.support.v7.widget.LinearLayoutCompat>
